Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25108

Issues panel not updated at second drag & drop

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • Qt Creator 4.15.0-beta1
    • Qt Creator 4.13.3
    • Editors
    • None
    • Debian 6.5 on x86
    • Linux/X11
    • 89f2c274c0026667ccdb896b5a957ef0d2a6c703 (qt-creator/qt-creator/master)

    Description

      We use a static code style analyse to check the code and create a static.tasks file containing the issues. The format is similarly to the compiler issues format. The file static.tasks can be dragged into Qt Creator's Issues panel and all code positions a marked as expected. But in most of the cases this works only once until restart of Qt Creator. 
      Sometimes the content of the Issues panel gets updated on update of the static.tasks file. But in most of the cases it gets not updated after dragging a different *.tasks file from a different location.

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            th.thielemann Thomas Thielemann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes