Tasklist: reload tasks when open task file again

Fixes: QTCREATORBUG-25108
Change-Id: Ib1096a098ab2b06ab384b31715ca32a0fd710781
Reviewed-by: Christian Stenger <christian.stenger@qt.io>